--- a/jackrabbit/pom.xml
+++ b/jackrabbit/pom.xml
@@ -2,12 +2,12 @@
     <parent>
         <artifactId>jcr.parent</artifactId>
         <groupId>com.xebialabs.crash</groupId>
-        <version>1.1.2-SNAPSHOT</version>
+        <version>1.1.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jcr.jackrabbit</artifactId>
     <packaging>jar</packaging>
-    <version>1.1.2-SNAPSHOT</version>
+    <version>1.1.2</version>
 
     <name>CRaSH Plugin - JCR Jackrabbit</name>
     <description>The CRaSH JCR module for Apache Jackrabbit</description>
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>com.xebialabs.crash</groupId>
             <artifactId>jcr.core</artifactId>
-            <version>1.1.2-SNAPSHOT</version>
+            <version>1.1.2</version>
         </dependency>
 
         <dependency>
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>com.xebialabs.crash</groupId>
             <artifactId>jcr.core</artifactId>
-            <version>1.1.2-SNAPSHOT</version>
+            <version>1.1.2</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
